// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PublicationPage > matches snapshot 1`] = `
.emotion-0 {
  margin: 0;
  font-family: "Tolkien",sans-serif;
  line-height: 1.5;
  font-weight: 300;
  font-size: 4.285714285714286rem;
}

.emotion-1 {
  margin: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-width: 0;
  border-style: solid;
  border-color: rgba(0, 0, 0, 0.12);
  border-bottom-width: thin;
  margin-bottom: 32px;
}

<div>
  <h3
    class="MuiTypography-root MuiTypography-h2 emotion-0"
  >
    Fragmentarium
  </h3>
  <hr
    class="MuiDivider-root MuiDivider-fullWidth emotion-1"
  />
  <div
    data-testid="generic-table"
  >
    <h3>
      Items partly related to Tolkien
    </h3>
    <div>
      Data count: 
      1
    </div>
    <div>
      Publication type: 
      article
    </div>
  </div>
  <div
    data-testid="generic-table"
  >
    <h3>
      Items that contain Tolkien articles or are partially devoted to Tolkien's works
    </h3>
    <div>
      Data count: 
      1
    </div>
    <div>
      Publication type: 
      article
    </div>
  </div>
  <div
    data-testid="generic-table"
  >
    <h3>
      E-publications
    </h3>
    <div>
      Data count: 
      1
    </div>
    <div>
      Publication type: 
      article
    </div>
  </div>
</div>
`;

exports[`PublicationPage > matches snapshot with empty data 1`] = `
.emotion-0 {
  margin: 0;
  font-family: "Tolkien",sans-serif;
  line-height: 1.5;
  font-weight: 300;
  font-size: 4.285714285714286rem;
}

.emotion-1 {
  margin: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-width: 0;
  border-style: solid;
  border-color: rgba(0, 0, 0, 0.12);
  border-bottom-width: thin;
  margin-bottom: 32px;
}

.emotion-2 {
  margin: 0;
  font-family: "Montserrat Variable",sans-serif;
  font-weight: 400;
  font-size: 1.1428571428571428rem;
  line-height: 1.5;
}

<div>
  <h3
    class="MuiTypography-root MuiTypography-h2 emotion-0"
  >
    Fragmentarium
  </h3>
  <hr
    class="MuiDivider-root MuiDivider-fullWidth emotion-1"
  />
  <p
    class="MuiTypography-root MuiTypography-body1 emotion-2"
  >
    No publications found
  </p>
</div>
`;

exports[`PublicationPage > matches snapshot with single publication type 1`] = `
.emotion-0 {
  margin: 0;
  font-family: "Tolkien",sans-serif;
  line-height: 1.5;
  font-weight: 300;
  font-size: 4.285714285714286rem;
}

.emotion-1 {
  margin: 0;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  border-width: 0;
  border-style: solid;
  border-color: rgba(0, 0, 0, 0.12);
  border-bottom-width: thin;
  margin-bottom: 32px;
}

<div>
  <h3
    class="MuiTypography-root MuiTypography-h2 emotion-0"
  >
    Fragmentarium
  </h3>
  <hr
    class="MuiDivider-root MuiDivider-fullWidth emotion-1"
  />
  <div
    data-testid="generic-table"
  >
    <h3>
      Items partly related to Tolkien
    </h3>
    <div>
      Data count: 
      1
    </div>
    <div>
      Publication type: 
      article
    </div>
  </div>
</div>
`;
